[package]
name = "network-journal"
version = "0.3.0"
authors = ["nerou GmbH"]
description = "Collect network reports and print them to file"
repository = "https://github.com/nerou42/network-journal"
license-file = "LICENSE.md"
keywords = ["report", "csp", "nel", "dmarc", "smtp-tls"]
categories = ["network-programming", "web-programming"]
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4", features = ["openssl"] }
clap = { version = "4.5.41", features = ["cargo", "derive"] }
confy = { version = "1.0.0", features = ["yaml_conf"], default-features = false }
flate2 = "1.1.2"
futures-util = "0.3.31"
imap = "2.4.1"
itertools = "0.14.0"
log = "0.4.27"
mail-parser = "0.11.0"
native-tls = "0.2.14"
openssl = "0.10.73"
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
simple_logger = "5.0.0"
zip = "4.3.0"
