[package]
name = "network-journal"
version = "0.5.1"
authors = ["nerou GmbH"]
description = "Collect network reports (like CSP, NEL, DMARC etc.) and print them to file"
repository = "https://github.com/nerou42/network-journal"
license = "GPL-3.0"
keywords = ["report", "csp", "nel", "dmarc", "smtp-tls", "reporting-api"]
categories = ["network-programming", "web-programming"]
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4", features = ["openssl"] }
clap = { version = "4.5.41", features = ["cargo", "derive"] }
config = { version = "0.15.18", default-features = false, features = ["yaml"] }
flate2 = "1.1.2"
futures-util = "0.3.31"
# hashify (dependency of mail-parser) v0.2.7+ uses Rust edition 2024 which is incompatible to latest Rust version in AlmaLinux 9 and 10
hashify = ">=0.2.0, <0.2.7"
imap = "3.0.0-alpha"
itertools = "0.14.0"
log = "0.4.27"
mail-parser = "0.11.0"
native-tls = "0.2.14"
openssl = "0.10.73"
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
simple_logger = "5.0.0"
uaparser-rs = "0.1.0"
url = "2.5.4"
zip = "6.0.0"
